--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.2",
+    "nextra": "^2.5.2",
+    "nextra-theme-blog": "^2.5.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
