--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
+    "@signal-noise/react-shader-canvas": "^0.0.3",
+    "@types/lodash": "^4.14.202",
+    "@types/mdx": "^2.0.10",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "glsl-canvas-js": "^0.2.9",
+    "glslCanvas": "^0.2.6",
+    "lodash": "^4.17.21",
     "next": "13.4.2",
-    "nextra": "^2.5.2",
+    "nextra": "^2.13.2",
     "nextra-theme-blog": "^2.5.2",
+    "nextra-theme-docs": "^2.13.2",
     "postcss": "8.4.23",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
