--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "@signal-noise/react-shader-canvas": "^0.0.3",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.202",
     "@types/mdx": "^2.0.10",
@@ -23,6 +24,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.16",
     "glsl-canvas-js": "^0.2.9",
     "glslCanvas": "^0.2.6",
     "lodash": "^4.17.21",
@@ -36,8 +38,12 @@
     "radix-themes-tw": "^0.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "windy-radix-palette": "^2.0.0-beta.7"
+  },
+  "devDependencies": {
+    "@types/resize-observer-browser": "^0.1.11"
   }
 }
