--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "webmscore": "^1.2.1",
     "windy-radix-palette": "^2.0.0-beta.7"
   },
   "devDependencies": {
