upgrade nextjs and nextra

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
-    "postbuild": "rm -rf .next/cache",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,23 +27,26 @@
     "glsl-canvas-js": "^0.2.9",
     "glslCanvas": "^0.2.6",
     "lodash": "^4.17.21",
-    "next": "13.4.2",
+    "next": "^16.1.0",
     "next-themes": "^0.2.1",
-    "nextra": "^2.13.2",
-    "nextra-theme-blog": "^2.5.2",
-    "nextra-theme-docs": "^2.13.2",
+    "nextra": "^4.6.1",
+    "nextra-theme-blog": "^4.6.1",
+    "nextra-theme-docs": "^4.6.1",
     "postcss": "^8.4.32",
     "prop-types": "^15.8.1",
     "radix-themes-tw": "^0.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
     "webmscore": "^1.2.1",
     "windy-radix-palette": "^2.0.0-beta.7"
   },
   "devDependencies": {
-    "@types/resize-observer-browser": "^0.1.11"
+    "@types/resize-observer-browser": "^0.1.11",
+    "postcss-import": "^16.1.1",
+    "typescript": "^5.9.3"
   }
 }
