--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,10 +24,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
     }
   },
   "include": [
